[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Jura-DemiBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/vaporwave_wallpaper.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Jura-Medium.otf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/AskName.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[node name="AskName" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.380392, 0.380392, 0.380392, 1 )
light_mask = 0
position = Vector2( 320.47, 179.479 )
scale = Vector2( 0.167248, 0.166845 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.351
margin_top = -112.703
margin_right = 106.649
margin_bottom = 117.297
color = Color( 0, 0.184314, 0.184314, 0.407843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_top = 1.0
margin_right = 95.5
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Enter Your 
Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5594
margin_top = -65.4703
margin_right = 55.4406
margin_bottom = -39.4703
disabled = true
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0297
margin_top = -17.0
margin_right = 79.9703
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
max_length = 24
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="ColorRect/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="ColorRect/LineEdit" to="." method="_on_LineEdit_text_entered"]
